Bug 1405319 part 1 - Don't try to optimize re-positioning of Flexbox/Grid abs.pos. children since they are affected by CSS Align positioning too.  r=dholbert

MozReview-Commit-ID: 2KNfvNVCeIN